Fixed the down links position on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,7 +7,7 @@
 
 @media (max-device-width: $screen-xs-max) {
   .android {
-    height:100px;
+    height: 100px;
   }
   .part {
     padding: 3.5em 0 !important;
@@ -49,7 +49,8 @@
   .fa-angle-down {
     width: 100%;
     text-align: center;
-    margin-top: 1em;
+    position: absolute;
+    bottom: 0;
   }
 }
 
